--- a/chart_08_slider copy 2/estilos.css
+++ b/chart_08_slider copy 2/estilos.css
@@ -1,5 +1,6 @@
 #chart {
     overflow-y: auto;
+
   }
   #chart svg {
     max-width: initial;
@@ -51,4 +52,9 @@
     padding: 5px;
     border: 2px outset;
     margin: 5px;
+  }
+  h6{
+    font-family: Arial;
+    font-size:12px;
+    color:rgba(128, 128, 128, 0.548)
   }
