--- a/chart_15_marks_a copy/estilos.css
+++ b/chart_15_marks_a copy/estilos.css
@@ -67,3 +67,12 @@
   margin-left: 407px;
   color: grey;
 }
+h6{
+  font-family: Arial;
+  font-size:12px;
+  color:rgba(128, 128, 128, 0.548)
+}
+#fuente{
+  margin-top: 500px;
+  margin-left: 530px;
+}
