--- a/chart_08_slider copy 2/estilos.css
+++ b/chart_08_slider copy 2/estilos.css
@@ -4,6 +4,7 @@
   }
   #chart svg {
     max-width: initial;
+    background-color:rgb(12, 3, 24);
   }
   #input {
     width: 250px;
@@ -12,30 +13,26 @@
     display: flex;
   }
   #selector p {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
   }
   .legend-title {
     margin-right: 10px;
   }
   p {
-    font-family: Arial;
     font-size:12px;
   }
   li {
-    font-family: Arial;
     font-size:12px;
   }
   h1 {
-    font-family: Arial;
     box-sizing: content-box; /* por default */
     width: 580px;
     padding: 6px;
     border: 0px outset;
     margin: 5px;
+    font-size: 36px;
   }
   h5{
-    font-family: Arial;
     font-style:none;
     font-size:12px;
   }
@@ -47,11 +44,21 @@
     margin: 5px;
   }
   h6{
-    font-family: Arial;
     font-size:12px;
     color:rgba(128, 128, 128, 0.548)
   }
   #fuente{
     margin-top: -63px;
     margin-left: 480px;
+  }
+  a{
+    font-weight: bold;
+    margin-left: 90%;
+    margin-top: 30%;
+    font-size: 10;
+  }
+  *{
+    font-family:  'Lucida Grande';
+    background-color:rgb(12, 3, 24);
+    color: rgb(226, 213, 242);
   }
