--- a/paula1/style.css
+++ b/paula1/style.css
@@ -1,12 +1,8 @@
 h1{
     text-align: center;
-    text-decoration: underline;
     text-transform: uppercase;
-    font-size: 120%;
+    font-size: 32px;;
     font-weight: 600;
-    font-family: arial;
-
-    
 }
 #chart{
     align-content: center;
@@ -23,6 +19,7 @@ h1{
   }
   #chart svg {
     max-width: max-content;
+    background-color: rgb(12, 3, 24);
   }
   #input {
     width: 400px;
@@ -31,4 +28,9 @@ h1{
   .legend-title {
     margin-right: 10px;
 
+  }
+  *{
+    font-family:  'Lucida Grande';
+    background-color: rgb(12, 3, 24);
+    color:rgb(226, 213, 242);
   }
