--- a/paula1/style.css
+++ b/paula1/style.css
@@ -1,6 +1,5 @@
 h1{
     text-align: center;
-    text-transform: uppercase;
     font-size: 32px;;
     font-weight: 600;
 }
@@ -10,15 +9,18 @@ h1{
     font-weight: 600;}
 
 #chart{
-    font-size: 200%,
+    font-size: 200%;
+    align-content: center;
 }
 
 #chart {
-    overflow-y:auto
+    overflow-y:auto;
+    align-content: center;
     
   }
   #chart svg {
     max-width: max-content;
+    align-content: center;
     background-color: rgb(12, 3, 24);
   }
   #input {
@@ -28,6 +30,12 @@ h1{
   .legend-title {
     margin-right: 10px;
 
+  }
+a{
+    font-weight: bold;
+    margin-left: 90%;
+    margin-top: 30%;
+    font-size: 10;
   }
   *{
     font-family:  'Lucida Grande';
