--- a/chart_08_slider copy 2/estilos.css
+++ b/chart_08_slider copy 2/estilos.css
@@ -1,26 +1,31 @@
 #chart {
     overflow-y: auto;
-
+    margin: 10px;
+    margin-left: -25px;
+    margin-top:-30px;
   }
   #chart svg {
     max-width: initial;
     background-color:rgb(12, 3, 24);
+    margin: 10px; 
+    
   }
+  
   #input {
     width: 250px;
   }
   #selector {
     display: flex;
     width: 500px; 
-    margin: 30;
+    margin: 10;
   }
   #selector p {
     font-size: 12px;
-    margin: 30;
+    margin: 10;
   }
   p {
     font-size:12px;
-    margin: 30;
+    margin: 10;
   }
   li {
     font-size:12px;
@@ -30,8 +35,10 @@
     width: 580px;
     padding: 6px;
     border: 0px outset;
-    margin: 30px;
+    margin: 10px;
     font-size: 36px;
+    margin-left:-7px;
+    margin-top:13px;
   }
   h5{
     font-style:none;
@@ -39,14 +46,33 @@
   }
   #cuerpo{
     box-sizing: content-box; /* por default */
+    margin-top: -100;  
     width: 580px;
     padding: 5px;
     border: 0px outset;
-    margin: 30px;    
+    margin: -28px auto 10px auto;
+    margin: 10px;
+    margin-top:-14px;
+    margin-left:-5px;
+  }
+  p{
+    font-size:14px;
+        color: rgb(140, 133, 149);
+  }
+  li{
+    font-size:14px;
+        color: rgb(140, 133, 149);
   }
   h6{
     font-size:12px;
     color:rgba(128, 128, 128, 0.548)
+  }
+  body{
+    box-sizing: content-box; /* por default */
+    width: 645px;
+    padding: 20px;
+    border: 0px double;
+    margin: 10px;
   }
 a{
     font-weight: bold;
