--- a/paula1/style.css
+++ b/paula1/style.css
@@ -1,7 +1,12 @@
-h1{
-    text-align: center;
-    font-size: 32px;;
-    font-weight: 600;
+h1 {
+  box-sizing: content-box; /* por default */
+  width: 580px;
+  padding: 6px;
+  border: 0px outset;
+  margin: 10px;
+  font-size: 36px;
+  margin-left:-7px;
+  margin-top:13px;
 }
 #chart{
     align-content: center;
@@ -25,6 +30,13 @@ h1{
   }
   #input {
     width: 400px;
+  }
+  body{
+    box-sizing: content-box; /* por default */
+    width: 645px;
+    padding: 20px;
+    border: 0px double;
+    margin: 10px;
   }
  
   .legend-title {
