--- a/dataviz_3/style.css
+++ b/dataviz_3/style.css
@@ -1,43 +1,37 @@
-h1 {
-  text-align: center;
-  text-decoration: underline;
-  text-transform: uppercase;
-  font-size: 120%;
-  font-weight: 600;
-  
-}
-  box-sizing: content-box; /* por default */
-  width: 580px;
-  padding: 6px;
-  border: 0px outset;
-  margin: 10px;
-  font-size: 36px;
-  margin-left:-7px;
-  margin-top:13px;
-}
-#chart{
-    align-content: center;
-    text-transform: capitalize;
-    font-weight: 600;}
 
-#chart{
-    font-size: 200%;
-    align-content: center;
-}
+
+  h1 {
+    text-align: left;
+    letter-spacing: 2px;
+    box-sizing: content-box; /* por default */
+    width: 800px;
+    font-size: 36px;
+    margin-left:-7px;
+    margin-top:13px;
+  }
+  p {
+    text-align: left;
+    text-decoration: none;
+    font-size: large;
+    color: rgb(140, 133, 149);
+  
+  }
 
 #chart {
     overflow-y:auto;
-    align-content: center;
+    place-content: left;
+    text-align:center;
+    display: grid;
+    width: 100%;
+    text-transform: capitalize;
+    font-weight: 500
+    
     
   }
   #chart svg {
-    max-width: max-content;
-    align-content: center;
     background-color: rgb(12, 3, 24);
   }
-  #input {
-    width: 400px;
-  }
+
   body{
     box-sizing: content-box; /* por default */
     width: 645px;
