--- a/dataviz_2/estilos.css
+++ b/dataviz_2/estilos.css
@@ -37,6 +37,7 @@
       h1 {
         font-size:36px;
       } 
+      /*chequear si queda mejor sin esto*/
       body{
         box-sizing: content-box; /* por default */
         width: 645px;
@@ -69,9 +70,7 @@ h6{
   margin-top: 500px;
   margin-left: 530px;
 }
-h1{
-  font-size: 32px;
-}
+
 a{
   font-weight: bold;
   margin-left: 90%;
