--- a/dataviz_4/style.css
+++ b/dataviz_4/style.css
@@ -1,11 +1,13 @@
 h1{
     text-align: center;
     text-decoration: underline;
-    text-transform: uppercase;
-    font-size: 120%;
-    font-weight: 600;
-
-    
+    font-weight: 600; 
+    font-size:36px; 
+}
+p {
+  text-decoration: none;
+  font-size:14px;
+  color: rgb(140, 133, 149);
 }
 #chart{
     align-content: center;
@@ -15,13 +17,17 @@ h1{
 #chart{
     font-size: 200%,
 }
-
+#fuente{
+  margin-top: 500px;
+  margin-left: 530px;
+}
 #chart {
     overflow-y:auto
     
   }
   #chart svg {
     max-width: max-content;
+    background-color: rgb(12, 3, 24);
   }
   #input {
     width: 400px;
@@ -30,4 +36,19 @@ h1{
   .legend-title {
     margin-right: 10px;
 
+  }
+  a{
+    font-weight: bold;
+    margin-left: 90%;
+    margin-top: 30%;
+    font-size: 10;
+  }
+  #todo{
+    margin-right: auto;
+    margin-left: auto;
+  }
+  *{
+    font-family:  'Lucida Grande';
+    background-color: rgb(12, 3, 24);
+    color:rgb(226, 213, 242);
   }
