--- a/dataviz_1/estilos.css
+++ b/dataviz_1/estilos.css
@@ -65,7 +65,7 @@
   }
   h6{
     font-size:12px;
-    color:rgba(128, 128, 128, 0.548)
+    color:rgba(128, 128, 128, 0.548);
   }
   body{
     box-sizing: content-box; /* por default */
@@ -80,6 +80,10 @@ a{
     margin-top: 30%;
     font-size: 10;
   }
+  .my-link {
+    color: rgba(128, 128, 128, 0.548);
+  }
+  
   *{
     font-family:  'Lucida Grande';
     background-color:rgb(12, 3, 24);
