--- a/dataviz_2/estilos.css
+++ b/dataviz_2/estilos.css
@@ -71,6 +71,14 @@ h6{
   margin-left: 530px;
 }
 
+.my-link {
+  color: rgba(128, 128, 128, 0.548);
+  margin-left: 90%;
+  margin-top: 100%;
+
+
+}
+
 a{
   font-weight: bold;
   margin-left: 90%;
