--- a/dataviz_3/style.css
+++ b/dataviz_3/style.css
@@ -40,6 +40,10 @@
     margin: 10px;
   }
  
+  .my-link {
+    color: rgba(128, 128, 128, 0.548);
+  }
+  
   .legend-title {
     margin-right: 10px;
 
