--- a/Grafico_2.js/style.css
+++ b/Grafico_2.js/style.css
@@ -1,33 +1,57 @@
-h1{
-    text-align: center;
-    text-decoration: underline;
-    text-transform: uppercase;
-    font-size: 120%;
-    font-weight: 600;
 
-    
+
+h1 {
+  text-align: left;
+  letter-spacing: 2px;
+  box-sizing: content-box; /* por default */
+  width: 800px;
+  font-size: 36px;
+  margin-left:-7px;
+  margin-top:13px;
 }
-#chart{
-    align-content: center;
-    text-transform: capitalize;
-    font-weight: 600;}
+p {
+  text-align: left;
+  text-decoration: none;
+  font-size: large;
+  color: rgb(140, 133, 149);
 
-#chart{
-    font-size: 200%,
 }
 
 #chart {
-    overflow-y:auto
-    
-  }
-  #chart svg {
-    max-width: max-content;
-  }
-  #input {
-    width: 400px;
-  }
- 
-  .legend-title {
-    margin-right: 10px;
+  overflow-y:auto;
+  place-content: left;
+  text-align:center;
+  display: grid;
+  width: 100%;
+  text-transform: capitalize;
+  font-weight: 500
+  
+  
+}
+#chart svg {
+  background-color: rgb(12, 3, 24);
+}
 
-  }
+body{
+  box-sizing: content-box; /* por default */
+  width: 645px;
+  padding: 20px;
+  border: 0px double;
+  margin: 10px;
+}
+
+.legend-title {
+  margin-right: 10px;
+
+}
+a{
+  font-weight: bold;
+  margin-left: 90%;
+  margin-top: 30%;
+  font-size: 10;
+}
+*{
+  font-family:  'Lucida Grande';
+  background-color: rgb(12, 3, 24);
+  color:rgb(226, 213, 242);
+}
