--- a/dataviz_2/estilos.css
+++ b/dataviz_2/estilos.css
@@ -24,6 +24,7 @@
     }
     #chart {
         overflow-y: auto;
+        
       }
       #chart svg {
         max-width: initial;
@@ -71,20 +72,15 @@ h6{
   margin-left: 530px;
 }
 
-.my-link {
-  color: rgba(128, 128, 128, 0.548);
-  margin-left: 90%;
-  margin-top: 100%;
-
-
-}
 
 a{
   font-weight: bold;
   margin-left: 90%;
   margin-top: 30%;
-  font-size: 10;
+  font-size: 16px;
 }
+
+
 #todo{
   margin-right: auto;
   margin-left: auto;
