--- a/dataviz_3/style.css
+++ b/dataviz_3/style.css
@@ -12,7 +12,7 @@
   p {
     text-align: left;
     text-decoration: none;
-    font-size: large;
+    font-size: 12px;
     color: rgb(140, 133, 149);
   
   }
@@ -21,11 +21,10 @@
     overflow-y:auto;
     place-content: left;
     text-align:center;
-    display: grid;
-    width: 100%;
+    width: 110%;
     text-transform: capitalize;
-    font-weight: 500
-    
+    font-weight: 500;
+    margin-left: -80px;
     
   }
   #chart svg {
@@ -50,10 +49,11 @@ a{
     font-weight: bold;
     margin-left: 90%;
     margin-top: 30%;
-    font-size: 10;
+    font-size: 16px;
   }
   *{
     font-family:  'Lucida Grande';
     background-color: rgb(12, 3, 24);
     color:rgb(226, 213, 242);
+    font-size: 12px;
   }
