--- a/dataviz_4/style.css
+++ b/dataviz_4/style.css
@@ -1,12 +1,9 @@
 
-
 h1 {
   text-align: left;
   letter-spacing: 2px;
   box-sizing: content-box; /* por default */
-  width: 800px;
   font-size: 36px;
-  margin-left:-7px;
   margin-top:13px;
 }
 p {
@@ -18,14 +15,9 @@ p {
 }
 
 #chart {
-  overflow-y:auto;
-  place-content: left;
-  text-align:center;
-  display: grid;
-  width: 100%;
   text-transform: capitalize;
-  font-weight: 500
-  
+  font-weight: 500;
+  color: rgb(140, 133, 149);
   
 }
 #chart svg {
@@ -34,10 +26,10 @@ p {
 
 body{
   box-sizing: content-box; /* por default */
-  width: 645px;
+  width: 1000px;
   padding: 20px;
   border: 0px double;
-  margin: 10px;
+  margin: 0px;
 }
 
 .legend-title {
