--- a/dataviz_4/style.css
+++ b/dataviz_4/style.css
@@ -13,6 +13,11 @@ p {
   color: rgb(140, 133, 149);
 
 }
+a{
+  font-weight: bold;
+  font-size: 10;
+  margin-left: 0%;
+}
 
 #chart {
   text-transform: capitalize;
