--- a/dataviz_3/style.css
+++ b/dataviz_3/style.css
@@ -12,7 +12,7 @@
     text-align: left;
     text-decoration: none;
     font-size: large;
-    color: rgb(26, 154, 0);
+    color:rgb(226, 213, 242);
     margin-left: 15px;
   
   }
@@ -27,8 +27,10 @@
     background-color: rgb(12, 3, 24);
   }
 
-a{
+
+  a{
     font-weight: bold;
+    margin-left: 90%;
     margin-top: 30%;
     font-size: 16px;
   }
