--- a/dataviz_4/style.css
+++ b/dataviz_4/style.css
@@ -13,12 +13,13 @@ p {
   color: rgb(140, 133, 149);
 
 }
+
 a{
   font-weight: bold;
-  font-size: 10;
-  margin-left: 0%;
+  margin-left: 0px;
+  margin-top: 30%;
+  font-size: 16px;
 }
-
 #chart {
   text-transform: capitalize;
   font-weight: 500;
